Tue Feb 23 15:08:32 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * config/wireshark.mpb:

          Switched from using windows project types to the windows property.

        * devtools/document_template.pl:

          Account for arrow operator usage.

        * modules/MakeProjectBase.pm:
        * modules/ProjectCreator.pm:
        * templates/make.mpd:

          Added a very limited ability to modify builtin component types
          (e.g., Source_Files, Header_Files, etc.).  Currently, only the
          postcommand is useful and only for the 'make' project type.

Fri Feb 19 15:25:47 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * docs/README:
        * docs/html/MakeProjectCreator.html:
        * modules/Creator.pm:
        * modules/ProjectCreator.pm:

          Added the ability for Define_Custom types to singly-inherit.

Thu Feb 18 18:31:55 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Check a string for definition before comparing.  Some versions of
          perl report a warning coming from the update_template_variable
          method.

Tue Feb 16 04:36:04 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * config/wireshark.mpb:

          Fixed whitespace problems introduced in previous commit.

Tue Feb 16 00:56:18 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * templates/make.mpd:

          Fixed a bug in the template where the 'dld' template variable was
          not honored.

        * templates/makedll.mpt:

          Added a 'macosx' platform similar to the 'macos' platform except
          that the linker is g++ and there are no additional libraries
          linked in.

Mon Feb 15 19:23:45 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * config/wireshark.mpb:

          Final round of updates for Wireshark support on Windows.

Mon Feb 15 04:59:26 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * config/wireshark.mpb:
