@@ -1632,6 +1632,12 @@
                     <td rowspan="1" colspan="1">
                       <p class="Tbl-Body">Specifies that this project must be
                       built after 1 or more project names listed.</p>
+                      <p class="Tbl-Body">An extended syntax is available
+                      in order to associate name-value pairs with a
+                      dependency: <em class="Code">&lt;project
+                      name[:name=value]&gt;</em><br>
+                      These name-value pairs may be used in the creation
+                      of the dependencies of the project.</p>
                     </td>
                   </tr>
 
